add new todo task

--- a/todo
+++ b/todo
@@ -38,3 +38,5 @@ add admin view all activity
 
 add user search history
 add get tags as user types input feedback
+implement skins / theme
+icons for well known tags ?
