add new todo task

--- a/todo
+++ b/todo
@@ -1,5 +1,7 @@
 dev-log todo:
 
+bugfix: custom tags should not contain the #tag in the value
+
 improve colour scheme
 improve ui design
 add user menu button click
