--- a/todo
+++ b/todo
@@ -1,10 +1,12 @@
+
+improve colour scheme: done
+improve ui design: done
+add user menu button click: done
+
 dev-log todo:
 
 bugfix: custom tags should not contain the #tag in the value
 
-improve colour scheme
-improve ui design
-add user menu button click
 add log button menu click
 add tag click to see user/global useage count
 
