--- a/todo.txt
+++ b/todo.txt
@@ -3,10 +3,10 @@ improve colour scheme: done
 improve ui design: done
 add user menu button click: done
 tags are now more responsive: done
+add ui footer with my website: done
 
 dev-log todo:
 
-add ui footer with my website: progress
 
 
 bugfix: custom tags should not contain the #tag in the value
