--- a/todo.txt
+++ b/todo.txt
@@ -9,6 +9,8 @@ bugfix: custom tags should not contain the #tag in the value: done
 
 dev-log todo:
 
+improve BEM class naming for header -> profile
+
 have a loading page when user might exists, main page flashes
 
 add log button menu click
