--- a/todo.txt
+++ b/todo.txt
@@ -5,13 +5,13 @@ add user menu button click: done
 tags are now more responsive: done
 add ui footer with my website: done
 improve BEM class naming for header -> profile: done
-
 bugfix: custom tags should not contain the #tag in the value: done
+add user email verify: done
+
 
 dev-log todo:
 
 add user recover account by email: progress
-add user email verify: progress
 
 have a loading page when user might exists, main page flashes
 
