--- a/todo.txt
+++ b/todo.txt
@@ -7,11 +7,11 @@ add ui footer with my website: done
 improve BEM class naming for header -> profile: done
 bugfix: custom tags should not contain the #tag in the value: done
 add user email verify: done
+add user recover account by email: done
 
 
 dev-log todo:
 
-add user recover account by email: progress
 
 have a loading page when user might exists, main page flashes
 
