--- a/todo.txt
+++ b/todo.txt
@@ -8,7 +8,8 @@ improve BEM class naming for header -> profile: done
 bugfix: custom tags should not contain the #tag in the value: done
 add user email verify: done
 add user reset password: done
-custom tag values not being trimmed: done
+fix first google sign in not working after installing app fresh: done
+custom tag values not being trimmed: done??
 
 dev-log todo:
 
