--- a/todo.txt
+++ b/todo.txt
@@ -9,10 +9,12 @@ bugfix: custom tags should not contain the #tag in the value: done
 add user email verify: done
 add user reset password: done
 fix first google sign in not working after installing app fresh: done
-custom tag values not being trimmed: done??
+custom tag values not being trimmed: done
+fe hashtag on tags missing: done
 
 dev-log todo:
 
+log max input warning at full is'mt looking good
 
 have a loading page when user might exists, main page flashes
 
