--- a/todo.txt
+++ b/todo.txt
@@ -14,14 +14,15 @@ fe hashtag on tags missing: done
 add log button menu click: done
 add user patch log flow: done
 add user delete log flow: done
-Look into better database schema for tags, type should NOT be just text should be IDs of other parent tags???: progress
+Look into better database schema for tags, type should NOT be just text should be IDs of other parent tags???: done
+Services being too mixed in BE, mixing of data should happen in stages in hooks!! (log class is already mising tag and tagtype in its methods): done
+do a more thorough cleanup of services, started with tagtype and tag, still to do logs properly!!!!: done
+add API hot reload on dev docker: done
 
 dev-log todo
 
 Landing page:
 
-Services being too mixed in BE, mixing of data should happen in stages in hooks!! (log class is already mising tag and tagtype in its methods)
-do a more thorough cleanup of services, started with tagtype and tag, still to do logs properly!!!!
 
 Have working on VPS box
 investigate CI/CD to docker setup
