--- a/todo.txt
+++ b/todo.txt
@@ -18,6 +18,7 @@ Look into better database schema for tags, type should NOT be just text should b
 Services being too mixed in BE, mixing of data should happen in stages in hooks!! (log class is already mising tag and tagtype in its methods): done
 do a more thorough cleanup of services, started with tagtype and tag, still to do logs properly!!!!: done
 add API hot reload on dev docker: done
+add user log and tag totals to profile
 
 dev-log todo
 
