--- a/todo.txt
+++ b/todo.txt
@@ -19,8 +19,11 @@ Services being too mixed in BE, mixing of data should happen in stages in hooks!
 do a more thorough cleanup of services, started with tagtype and tag, still to do logs properly!!!!: done
 add API hot reload on dev docker: done
 add user log and tag totals to profile
+add user edit password: done
 
 dev-log todo
+
+add github actions init: progress
 
 Landing page:
 
@@ -44,7 +47,6 @@ add favicon for app
 
 add contact us web form
 
-add user edit password: done
 add user delete account option
 add user request all data option GDPR
 
